# edge-depth-robotics-cv-study

./: .gitignore  DIAGNOSTICO_BAG.md  PLANO_VALIDACAO.md  README.md  RELATORIO_JORNADA.md  pyproject.toml
codigo-treinamento/: README.md  baixar_dados.py  dataloader.py  treinar_depth_anything_v2.py  treinar_monodepth2.py  treinar_zoedepth.py  treino_utils.py
metricas/: metricas.py
quantizacao/: README.md
quantizacao/build_trt/: RESOLUCAO_INT8.md  build_engine.py  construir_todos.sh
quantizacao/export/: _common.py  export_dav2.py  export_monodepth2.py  export_zoedepth.py  exportar_todos.sh  preparar_calibracao.py
quantizacao/utils/: avaliar_engine.py  benchmark.py  gerar_pareto.py  validate.py
scripts/: run_all.sh  run_dav2_frozen.sh  run_dav2_trainable.sh  run_monodepth2.sh  run_zoedepth_frozen.sh  run_zoedepth_trainable.sh  slim_checkpoint.py
validacao/: README.md  __init__.py  alinhamento.py  avaliacao.py  avaliar.py  calibracao.py  demo_conceito.py  diag_baseline.py  geometria.py  gerar_bag_sintetico.py  inspecionar_bag.py  leitor_rosbag.py
validacao/config/: calibracao_exemplo.yaml  calibracao_realsense_d415.yaml
