[project]
name = "trabalho-final"
version = "0.1.0"
description = "Repositório de treinamento de modelos de visão computacional"
requires-python = ">=3.10,<3.11"
dependencies = [
    # Deep learning
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torchaudio>=2.2.0",
    # Visão computacional
    "opencv-python>=4.9.0",
    "Pillow>=10.2.0",
    "albumentations>=1.4.0",
    # Dados e computação numérica
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    # Visualização
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # Acompanhamento de experimentos
    "tensorboard>=2.16.0",
    # Utilitários
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
    "rosbags>=0.9",
]

# ---------------------------------------------------------------------------
# PyTorch builds com CUDA (Linux x86_64).
#
# Default: CUDA 12.6 (compatível com RTX 4090 + driver moderno).
# Se sua workstation tem driver com CUDA < 12.6, troque "cu126" por:
#   - "cu124" para CUDA 12.4
#   - "cu121" para CUDA 12.1
# nos 4 lugares abaixo (URL do índice + 3 sources).
#
# Em macOS o uv ignora estas sources e cai no PyPI padrão (com suporte MPS).
# ---------------------------------------------------------------------------

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
